[project]
name = "bad-leonfelden-housing-monitor"
version = "1.0.0"
description = "A Python application that monitors the Bad Leonfelden housing website for new listings and sends instant notifications"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "requests>2.31.0",
]

[project.scripts]
housing-monitor = "housing_monitor:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"